--- a/index.html
+++ b/index.html
@@ -4,30 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Vamos Contar</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Verificador de Idade</h1>
+        <h1>Vamos contar</h1>
     </header>
     <section>
         <div >
-            <p>Ano de nascimento:
-                <input type="number" name="txtano" id="txtano" min="0">
+            <p>Início:
+                <input type="number" name="numeroInicial" id="numeroInicial" >
             </p>
-            <p>Sexo:
-                <input type="radio" name="radsex" id="masc" checked>
-                <label for="masc">Masculino</label>
-                <input type="radio" name="radsex" id="fem">
-                <label for="fem">Feminino</label>
+
+            <p>Fim:
+                <input type="number" name="numeroLimite" id="numeroLimite" >
             </p>
+
+            <p>Passo:
+                <input type="number" name="multiplicador" id="multiplicador" >
+            </p>
+
             <p>
-                <input type="button" value="Verificar" onclick="verificar()">
+                <input type="button" value="Verificar" onclick="contar()">
             </p>
         </div>
         <div id="res">
-            Preencha os dados acima para ver o resultado!
+            Preparando a contagem!
         </div>
     </section>
     <footer>
